# RAG-mcp

./: ACTUAL_WORKFLOW.md  FUNCTION_DESCRIPTIONS.txt  analyze_data_structure.py  api_config.py  architecture_refactor_summary.md  circuit.json  cleanup_documents.py  debug_gent_query.py  debug_llm_context.py  debug_pattern_matching.py  followup.html  ftth_olt.json  ingest_documents.py  lag.json  mobile_modem.json  network-rag-architecture.html  proper_rag_architecture.md  pxc.json  rag_system_analysis.md  refactor_plan.md  refactoring_impact.md  team.json  test_architecture_refactor.py  test_hard_questions.py  test_knowledge_base.py  test_llm_integration.py  test_lm_studio.py  test_mcp.py  test_rag_fusion.py  test_scenario_2.py  test_simple_network_query.py  test_specific_devices.py
RAG/: .env  .env.example  README.md  README_MCP_STANDARD.md  claude_desktop_config.json  complete_system_presentation.md  debug_execution.py  debug_strategy.py  debug_test.py  demo_mcp_standard.py  docker-compose.yml  knowledge_base_embedding_flow.md  main.py  mcp_server_runner.py  pyproject.toml  requirements.txt  schema_aware_rag_flow.md
RAG/cache/embeddings/: aef9cec558b69a93.pkl
RAG/data/documents/: ftth_olt_comprehensive_guide.md  ftth_olt_configuration_management.md  ftth_olt_health_monitoring.md  ftth_olt_technical_specifications.md  ftth_olt_troubleshooting_guide.md  get_device_details_tool.md  list_network_devices_tool.md  query_network_resources_tool.md
RAG/docs/: README.md  code_walkthrough.md  knowledge_base_visualization.md  system_flow_visualization.md
(+40 files in other folders)
