[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.16.0",
    "black>=23.0.0",
    "fastapi>=0.100.0",
    "motor>=3.0.0",
    "mypy>=1.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pymongo>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn>=0.20.0",
]
